--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "connect-livereload": "^0.4.0",
     "express": "^4.8.5",
+    "gulp-image-resize": "^0.5.0",
+    "gulp-rename": "^1.2.0",
     "tiny-lr": "^0.1.0"
   }
 }
