--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "connect-livereload": "^0.4.0",
     "express": "^4.8.5",
     "gulp-image-resize": "^0.5.0",
+    "gulp-jshint": "^1.8.4",
+    "gulp-notify": "^1.5.0",
+    "gulp-plumber": "^0.6.5",
     "gulp-rename": "^1.2.0",
     "tiny-lr": "^0.1.0"
   }
