Adding path vars and image move

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "type": "git",
         "url": "https://github.com/jamesmorgan/jem-solutions.git"
     },
-    "author": "",
+    "author": "James Morgan",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/jamesmorgan/jem-solutions/issues"
