--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
-.idea
-bower_components
-node_modules
 .DS_Store
+.idea
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules
+bower_components
+
+# Build files
+build
+templates.js
