--- a/package.json
+++ b/package.json
@@ -1,29 +1,55 @@
 {
     "name": "jem-solutions",
-    "version": "0.0.1",
-    "description": "JE Morgan Solutions Ltd website",
-    "main": "index.html",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
+    "version": "0.1.0",
+    "author": "James Morgan <james.morgan.e(@)googlemail.com>",
+    "license": "MIT",
+    "description": "JE Morgan Solutions Ltd website - using AngularJS, SASS, Gulp, and Browserify while also utilizing best practices.",
     "repository": {
         "type": "git",
         "url": "https://github.com/jamesmorgan/jem-solutions.git"
     },
-    "author": "James Morgan",
-    "license": "MIT",
+    "main": "index.html",
     "bugs": {
         "url": "https://github.com/jamesmorgan/jem-solutions/issues"
     },
-    "homepage": "https://github.com/jamesmorgan/jem-solutions",
+    "homepage": "http://www.jem-solutions.co.uk",
+    "keywords": [
+        "express",
+        "gulp",
+        "browserify",
+        "angular",
+        "sass",
+        "boilerplate"
+    ],
+    "private": true,
+    "engines": {
+        "node": ">=0.10.26"
+    },
     "devDependencies": {
+        "angular": "^1.2.19",
+        "angular-ui-router": "^0.2.10",
+        "browserify": "^5.10.0",
+        "browserify-ngannotate": "^0.1.0",
         "connect-livereload": "^0.4.0",
-        "express": "^4.8.5",
+        "express": "^4.7.2",
+        "gulp": "^3.8.6",
+        "gulp-angular-templatecache": "^1.3.0",
         "gulp-image-resize": "^0.5.0",
-        "gulp-jshint": "^1.8.4",
+        "gulp-jshint": "^1.8.3",
+        "gulp-livereload": "^2.1.0",
         "gulp-notify": "^1.5.0",
-        "gulp-plumber": "^0.6.5",
         "gulp-rename": "^1.2.0",
-        "tiny-lr": "^0.1.0"
+        "gulp-sass": "^0.7.2",
+        "gulp-streamify": "0.0.5",
+        "karma": "^0.12.21",
+        "karma-browserify": "^0.2.1",
+        "morgan": "^1.2.2",
+        "run-sequence": "^0.3.6",
+        "tiny-lr": "0.0.9",
+        "uglifyify": "^2.5.0",
+        "vinyl-source-stream": "^0.1.1"
+    },
+    "scripts": {
+        "test": "karma start karma.conf"
     }
 }
