--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "gulp-notify": "2.2.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.0.4",
+    "gulp-sourcemaps": "1.5.2",
     "gulp-streamify": "1.0.0",
-    "karma": "0.13.9",
-    "karma-browserify": "4.3.0",
-    "morgan": "1.6.1",
-    "run-sequence": "1.1.2",
+    "gulp-uglify": "1.4.0",
+    "gulp-util": "3.0.6",
     "http-server": "^0.7.4",
-    "uglifyify": "3.0.1",
+    "run-sequence": "1.1.2",
+    "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
   "scripts": {
