--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gulp-streamify": "1.0.0",
     "gulp-uglify": "1.4.0",
     "gulp-util": "3.0.6",
-    "http-server": "^0.7.4",
+    "http-server": "0.8.0",
     "run-sequence": "1.1.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
