--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "postinstall": "",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 5000"
+  },
+  "dependencies": {
+    "angular-messages": "1.4.5",
+    "angularfire": "1.1.2",
+    "firebase": "2.2.9"
   }
 }
