--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "start": "http-server -a localhost -p 5000"
   },
   "dependencies": {
+    "angular-bootstrap": "0.12.2",
     "angular-messages": "1.4.5",
     "angularfire": "1.1.2",
     "firebase": "2.2.9"
